# law7

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_REQUEST_ENHANCED_PDF_OCR.md  LICENSE  README.md  SECURITY.md  TODO.md  law7_enhancement_roadmap_v2.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: GITHUB_PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
docker/: backup.sh  check-backup.sh  docker-compose.yml  restore.sh
docker/postgres/: init.sql
docs/: AI_WORKFLOW.md  BACKUP_RESTORE.md  DATA_PIPELINE.md  DISCLAIMER.md  PHASE0_P2P_RESEARCH.md  PHASE1_FOUNDATION.md  PHASE2_PERFORMANCE.md  PHASE3_OCR.md  PHASE4_REGIONAL.md  PHASE5_COURTS.md  PHASE6_INTERPRETATIONS.md  PHASE7_STRUCTURE_REFACTORING.md  PRESENTATION_EN.md  PRESENTATION_RU.md  ROADMAP.md  VISION.md
logs/: minfin_failed_docs.txt
scripts/: search_and_ingest.py  search_kremlin_codes.py  test_content_parsing.py  test_db_count.py  test_fns_full_pages.py  test_fns_no_limit.py  test_fns_pag.py  test_fns_scraper.py  test_minfin_both.py
scripts/analysis/: analyze_all_portals.py  analyze_minfin.py  analyze_moscow_duma.py  analyze_supreme_court.py
scripts/consolidation/: __init__.py  amendment_parser.py  consolidate.py  diff_engine.py  version_manager.py
scripts/core/: __init__.py  article_parser.py  config.py  db.py  exceptions.py  logging.py
scripts/country_modules/: __init__.py  registry.py
scripts/crawler/: __init__.py  pravo_api_client.py
scripts/docs/: API_TESTING.md  api_help.html  phase7c_analysis_summary.md  phase7c_devtools_analysis_guide.md  phase7c_portal_research.md  pravo_api_analysis.md
scripts/explorer/: __init__.py  api_explorer.py
scripts/import/: import_base_code.py  scrape_consultant_structure.py  test_amendment_fix.py
scripts/indexer/: __init__.py  embeddings.py  postgres_indexer.py  qdrant_indexer.py
scripts/parser/: __init__.py  court_decision_parser.py  html_parser.py  html_scraper.py
scripts/samples/: categories_sample.json  document_types_sample.json  (+4 more)
src/: config.ts  http-server.ts  index.ts  server.ts
(+108 files in other folders)
